# dhurandhar

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
configs/: gemma4_lora.yaml  pixel_10_pro.yaml  zaya1_8b.yaml
docs/: DECISION_LOG.md
scripts/: generate_oscar_report.py  generate_spectralquant_grassmanians_report.py
src/dhurandhar/: __init__.py  cli.py  config.py  dashboard.py  finetune.py  mmap_profiler.py  oscarquant.py  ple_analysis.py  rotorquant.py  spectralquant.py  turboquant.py
src/dhurandhar/analysis/: __init__.py
src/dhurandhar/cli/: __init__.py
src/dhurandhar/dashboard/: __init__.py
src/dhurandhar/devices/: __init__.py  _base.py
src/dhurandhar/models/: __init__.py  _base.py
src/dhurandhar/utils/: __init__.py
tests/: conftest.py  test_config.py  test_mmap_profiler.py  test_oscarquant.py  test_ple_analysis.py  test_rotorquant.py  test_smoke.py  test_strip_audio.py  test_turboquant.py
