[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dhurandhar"
version = "0.1.0"
description = "Model-agnostic edge deployment analysis framework for memory-constrained devices"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "Suneel Marthi" },
]
keywords = [
    "llm",
    "edge-ai",
    "model-compression",
    "quantization",
    "multimodal",
    "turbo-quant",
    "rotor-quant",
    "mmap",
    "on-device-ai",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Hardware",
]
dependencies = [
    "numpy>=1.24",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dashboard = [
    "gradio>=4.0",
    "plotly>=5.0",
]
hf = [
    "huggingface-hub>=0.23",
    "requests>=2.31",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
all = [
    "dhurandhar[dashboard,hf,dev]",
]

[project.scripts]
dhurandhar-ple-analyze    = "dhurandhar.cli:ple_analyze"
dhurandhar-device-check   = "dhurandhar.cli:device_check"
dhurandhar-turbo-sweep    = "dhurandhar.cli:turbo_sweep"
dhurandhar-mmap-profile   = "dhurandhar.cli:mmap_profile"
dhurandhar-compare-codecs = "dhurandhar.cli:compare_codecs"
dhurandhar-dashboard      = "dhurandhar.cli:dashboard"

[project.urls]
Homepage    = "https://github.com/suneel-marthi/dhurandhar"
Repository  = "https://github.com/suneel-marthi/dhurandhar"
Issues      = "https://github.com/suneel-marthi/dhurandhar/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/dhurandhar"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"
